# CSC3050-2025-Spring-Project-4

./: .gitignore  CMakeLists.txt  README.md  report.md
include/: Cache.h  Debug.h  MemoryManager.h  MultiLevelCacheConfig.h
include/elfio/: elf_types.hpp  elfio.hpp  elfio_dump.hpp  elfio_dynamic.hpp  elfio_header.hpp  elfio_note.hpp  elfio_relocation.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_strings.hpp  elfio_symbols.hpp  elfio_utils.hpp
src/: Cache.cpp  MainMulCache.cpp  MainSinCache.cpp  MemoryManager.cpp
trace/Part1/: D.trace  D.trace.csv  I.trace  I.trace.csv
trace/Part2/: test.trace.csv  test.trace_multi_level.csv
trace/Part3/: test1.trace  test1.trace_multi_level.csv  test2.trace  test2.trace_multi_level.csv  test3.trace  test3.trace_multi_level.csv
trace/Part4/: matmul0.trace_multi_level.csv  matmul1.trace_multi_level.csv  matmul2.trace_multi_level.csv  matmul3.trace_multi_level.csv  matmul4.trace_multi_level.csv
